tests/paczka1/fuzzy1/85164077.err
Error in line 1: A101 A938 0,6
Error in line 12: YdwqX S61 76,7
Error in line 3: A101 A824 47,3
Error in line 10: NE1V S61 36,6
Error in line 20: NE1V A938 40,2
Error in line 15: C1O9UxtOH2Q S61 32,9
Error in line 26: A101 S61 59,2
Error in line 32: A101 A824 52,7
Error in line 34: YdwqX A101 18,5
